force-app/main/default/objects/Project_Leads_Delivered__c/Project_Leads_Delivered__c.object-meta.xml
<CustomObject>
    <label>Project Leads Delivered</label>
    <nameField>
        <displayFormat>PLD-{000000}</displayFormat>
        <label>Project Leads Delivered</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Leads Delivered</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>