force-app/main/default/objects/Project_Leads_Delivered__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The date leads were delivered to the client</description>
    <inlineHelpText>The date leads were delivered to the client</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>