force-app/main/default/objects/Project_Leads_Delivered__c/fields/Number_of_Leads__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Leads__c</fullName>
    <description>Number of leads delivered to the client</description>
    <inlineHelpText>Number of leads delivered to the client</inlineHelpText>
    <label>Number of Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>