force-app/main/default/objects/Project_Leads_Delivered__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>SFL5_Projects__c</referenceTo>
    <relationshipLabel>Project Leads Delivered</relationshipLabel>
    <relationshipName>Project_Leads_Delivered</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>